--- a/src/assets/appheader.css
+++ b/src/assets/appheader.css
@@ -53,15 +53,30 @@ a {
 .navbar {
     width: 100%;
     height: 70px;
+    position: relative;
     background-color: rgba(	248,248,255,0.9);
     /* 盒子阴影 */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+.search{
+    line-height: 70px;
+    width: 25%;
+    float: right;
+    position: absolute;
+    left: 37.5%;
+}
+.searchbutton{
+    line-height: 70px;
+    position: absolute;
+    float: right;
+    left:63%
 }
 .navbar .nav {
     width: 600px;
     height: 100%;
     /* 让元素自动水平居中 */
-    margin: 0 75%;
+    position: absolute;
+    left:67.5%;
 }
 .navbar .nav ul {
     /* 相对定位 */
