--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -71,10 +71,12 @@ h1{
 	margin: 0;
 	border: 0;
 }
-.background{
-	background-image: url(city.jpg);
-	background-repeat: repeat-x;
+.background_userinfo{
+	background-image: url("../assets/city.jpg");
+	background-repeat: round;
 	background-size: 100%;
+  width: 100%;
+  height: 100%;
 }
 .head{
 	position: relative;
@@ -83,11 +85,11 @@ h1{
 	cursor: pointer;
 }
 .main{
-	position: relative;
-	bottom: -70px;
+	position: absolute;
+	/*bottom: -70px;*/
 	left: 400px;
-	width: 810px;
-	height: 800px;
+	width: 800px;
+	height: 730px;
 	/*border-style: solid;
 	border-width: 2px;*/
 	background-color: white;
@@ -122,7 +124,6 @@ h1{
 .body{
 	/*border-width: 2px;
 	border-style: solid;*/
-	height: 760px;
 }
 
 .info-head{
