--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -87,12 +87,13 @@ h1{
 .main{
 	position: absolute;
 	/*bottom: -70px;*/
-	left: 400px;
-	width: 800px;
-	height: 730px;
+	left: 500px;
+	top: 100px;
+	width: 600px;
+	height: 680px;
 	/*border-style: solid;
 	border-width: 2px;*/
-	background-color: white;
+	background-color: #f6ffff;
 	opacity: 0.9;
 }
 .menu1{
@@ -100,7 +101,8 @@ h1{
 	width: 215px;
 	height: 40px;
 	position: relative;
-	left: 600px;
+	left: 350px;
+	top: 20px;
 }
 .lastOption{
 	border-right-style: none;
@@ -130,16 +132,21 @@ h1{
 	position: relative;
 	width: 154px;
 	height: 154px;
-	left: 100px;
+	left: 10px;
 	top: 62px;
-	/*border-style: solid;
-	border-width: 5px;*/
 }
 .info-head>img{
 	width: 150px;
 	height: 150px;
 	position: absolute;
 	right: 0;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #b3e2ea;
+}
+.info-head>p{
+	position: relative;
+	top: 160px;
 }
 .imgCover{
 	width: 150px;
@@ -169,11 +176,11 @@ h1{
 	position: relative;
 	width: 400px;
 	height: 500px;
-	right: 100px;
-	top: -80px;
-	border-style: solid;
+	left: -20px;
+	top: -100px;
+	/*border-style: solid;
 	border-width: 2px;
-	border-color: yellowgreen;
+	border-color: yellowgreen;*/
 }
 .info-body .e1-input{
 	width: 200px;
