--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -77,6 +77,7 @@ h1{
 	background-size: 100%;
   width: 100%;
   height: 100%;
+	position: fixed;
 }
 .head{
 	position: relative;
@@ -88,42 +89,38 @@ h1{
 	position: absolute;
 	/*bottom: -70px;*/
 	left: 500px;
-	top: 100px;
+	top: 25px;
 	width: 600px;
 	height: 680px;
-	/*border-style: solid;
-	border-width: 2px;*/
 	background-color: #f6ffff;
 	opacity: 0.9;
 }
 .menu1{
-	background-color: #d0d0d0;
-	width: 215px;
-	height: 40px;
+	background-color: #e0f5f5;
+	width: 60px;
+	height: 160px;
 	position: relative;
-	left: 350px;
+	left: -150px;
 	top: 20px;
 }
-.lastOption{
-	border-right-style: none;
-}
 .menu1>li{
-		width: 40px;
+		width: 50px;
 		height: 20px;
 		padding: 10px 5px;
 		text-align: center;
 		font-family: "microsoft yahei light";
 		display: block;
-		float: right;
-		border-right-style: solid;
+		/*border-right-style: solid;
 		border-right-width: 5px;
-		border-right-color: #f5f5f5;
+		border-right-color: #f5f5f5;*/
 }
 .menu1>li:first-child{
 	border-right-style: none;
 }
-.menu1>li:hover{background-color: #afafaf;}
+.menu1>li:hover{background-color: #d4e7e7;}
 .body{
+	position:relative;
+	top: -150px;
 	/*border-width: 2px;
 	border-style: solid;*/
 }
