--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -229,3 +229,18 @@ h1{
 	position: relative;
 	top: 40px;
 }
+.info-edit{
+	position: relative;
+	top: 250px;
+	left: 400px;
+}
+.info-save{
+	position: relative;
+	top: 250px;
+	left: 395px;
+}
+.info-cancel{
+	position: relative;
+	top: 210px;
+	left: 250px;
+}
