--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -110,6 +110,7 @@ h1{
 		text-align: center;
 		font-family: "microsoft yahei light";
 		display: block;
+		cursor: pointer;
 		/*border-right-style: solid;
 		border-right-width: 5px;
 		border-right-color: #f5f5f5;*/
@@ -117,7 +118,10 @@ h1{
 .menu1>li:first-child{
 	border-right-style: none;
 }
-.menu1>li:hover{background-color: #d4e7e7;}
+.menu1>li:hover{
+	background-color: #d4e7e7;
+	text-color: white;
+}
 .info{
 	position:relative;
 	top: -150px;
