--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -98,37 +98,37 @@ h1{
 .menu1{
 	background-color: #e0f5f5;
 	width: 60px;
-	height: 160px;
+	height: 240px;
 	position: relative;
 	left: -150px;
 	top: 20px;
 }
 .menu1>li{
-		width: 50px;
-		height: 20px;
-		padding: 10px 5px;
-		text-align: center;
-		font-family: "microsoft yahei light";
-		display: block;
-		cursor: pointer;
-		/*border-right-style: solid;
-		border-right-width: 5px;
-		border-right-color: #f5f5f5;*/
+	width: 50px;
+	height: 20px;
+	padding: 10px 5px;
+	text-align: center;
+	font-family: "microsoft yahei light";
+	display: block;
+	cursor: pointer;
+	/*border-right-style: solid;
+	border-right-width: 5px;
+	border-right-color: #f5f5f5;*/
 }
 .menu1>li:first-child{
 	border-right-style: none;
 }
 .menu1>li:hover{
 	background-color: #d4e7e7;
-	text-color: white;
+	/*color: white;*/
 }
-.info{
-	position:relative;
-	top: -150px;
-	/*border-width: 2px;
-	border-style: solid;*/
+.userinfo-maincard{
+	position: relative;
+	top: -230px;
+	/*border: 2px black solid;*/
+	height: 100%;
+	width: 100%;
 }
-
 .info-head{
 	position: relative;
 	width: 154px;
@@ -199,13 +199,7 @@ h1{
 	top: 590px;
 	left: 100px;
 }
-.order{
-	position:relative;
-	top: -150px;
-}
 .favorite{
-	position:relative;
-	top: -160px;
 	height: 680px;
 	width: 615px;
 	/*border-style: solid;
@@ -221,10 +215,6 @@ h1{
 .favorite-goodContainer::-webkit-scrollbar {
 /*隐藏滚轮*/
 	display: none;
-}
-.demand{
-	position:relative;
-	top: -150px;
 }
 .el-divider{
 	margin: 0;
@@ -275,6 +265,10 @@ h1{
 	left: -20px;
 	top: -290px;
 }
+.demand{
+	height: 680px;
+	width: 615px;
+}
 .demand-needContainer{
 	position: relative;
 	top: 50px;
@@ -291,9 +285,42 @@ h1{
 }
 .demand-divider1{
 	position: relative;
-	top: 40px;
+	top: 50px;
 }
 .demand-divider2{
 	position: relative;
-	top: 610px;
+	top: 620px;
+}
+.good___{
+	height: 680px;
+	width: 615px;
+	/*border-style: solid;
+	border-width:2px;*/
+}
+.intention_fold{
+	position: relative;
+	left: 100%;
+	top: -16.66666%;
+}
+.intention_fold>li{
+	width: 50px;
+	height: 20px;
+	padding: 10px 5px;
+	text-align: center;
+	font-family: "microsoft yahei light";
+	display: block;
+	cursor: pointer;
+	background-color: #e0f5f5;
+}
+.intention_fold>li:hover{
+	background-color: #d4e7e7;
+}
+.intentionContainer{
+	width: 100%;
+	height: 95%;
+	overflow-y: scroll;
+	/*border: 2px black solid;*/
+}
+.intentionContainer::-webkit-scrollbar{
+	display: none;
 }
