--- a/src/assets/NeedShowPage.css
+++ b/src/assets/NeedShowPage.css
@@ -1,5 +1,5 @@
 .needinfo{
-    margin: 50px auto;
+    margin: 50px auto 0px;
     width: 1280px;
     height: 480px;
 }
@@ -179,31 +179,6 @@
     border-bottom-width: 0;
     border-top-width: 4px;
     cursor: pointer;
-}
-.pulseAnim {
-    display: block;
-    padding: 12px 15px;
-    border-radius: 50%;
-    background:#409EFF ;
-    cursor: pointer;
-    box-shadow: 0 0 0 rgba(64, 158, 255, 0.5);
-    animation: pulseAnim 2s infinite;
-}
-.pulseAnim .el-icon-top{
-    font-weight: 700;
-    font-size: 20px;
-    color: white;
-}
-@keyframes pulseAnim {
-    0% {
-        box-shadow: 0 0 0 0 rgba(64, 158, 255, 0.5);
-    }
-    70% {
-        box-shadow: 0 0 0 10px rgba(64, 158, 255, 0);
-    }
-    100% {
-        box-shadow: 0 0 0 0 rgba(64, 158, 255, 0);
-    }
 }
 
 .bouncingLoader > div, .bouncingLoader:before, .bouncingLoader:after {
