--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -297,12 +297,7 @@ h1{
 	/*border-style: solid;
 	border-width:2px;*/
 }
-.intention_fold{
-	position: relative;
-	left: 100%;
-	top: -16.66666%;
-}
-.intention_fold>li{
+.submenu_fold>li{
 	width: 50px;
 	height: 20px;
 	padding: 10px 5px;
@@ -312,15 +307,25 @@ h1{
 	cursor: pointer;
 	background-color: #e0f5f5;
 }
-.intention_fold>li:hover{
+.submenu_fold>li:hover{
 	background-color: #d4e7e7;
 }
-.intentionContainer{
+.intention_fold{
+	position: absolute;
+	left: 100%;
+	/*top: -16.66666%;*/
+}
+.order_fold{
+	position: absolute;
+	left: 100%;
+	/*top: -66.66666;*/
+}
+.rectangleContainer{
 	width: 100%;
 	height: 95%;
 	overflow-y: scroll;
 	/*border: 2px black solid;*/
 }
-.intentionContainer::-webkit-scrollbar{
+.rectangleContainer::-webkit-scrollbar{
 	display: none;
 }
