修改自己发布的商品

--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -329,3 +329,20 @@ h1{
 .rectangleContainer::-webkit-scrollbar{
 	display: none;
 }
+/*以下是关于标签的，从element ui抄的,对button有改动*/
+.el-tag + .el-tag {
+	margin-left: 10px;
+}
+.button-new-tag {
+	margin-left: 10px;
+	height: 32px;
+	line-height: 30px;
+	padding-top: 0;
+	padding-bottom: 0;
+}
+.input-new-tag {
+	width: 90px;
+	margin-left: 10px;
+	vertical-align: bottom;
+}
+/*以上是关于标签的，从element ui抄的,对button有改动*/
