--- a/src/assets/appheader.css
+++ b/src/assets/appheader.css
@@ -61,6 +61,7 @@ a {
     width: 100%;
     height: 70px;
     position: relative;
+    z-index:999;
     background-color: rgba(	255,255,255,1);
     /* 盒子阴影 */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
