--- a/src/assets/GoodShowPage/GoodShowPage.css
+++ b/src/assets/GoodShowPage/GoodShowPage.css
@@ -1,19 +1,37 @@
-.needinfo{
-    margin: 50px auto 0px;
+.goodinfo{
+    margin: 20px auto 40px;
     width: 1280px;
-    height: 480px;
+    height: 580px;
+    border-radius: 8px;
+    background-color: rgba(226,243,245,0.6);
+    box-shadow:
+            0 2px 2.2px rgba(0, 0, 0, 0.017),
+            0 4.8px 5.3px rgba(0, 0, 0, 0.024),
+            0 9px 10px rgba(0, 0, 0, 0.03),
+            0 16.1px 17.9px rgba(0, 0, 0, 0.036),
+            0 30.1px 33.4px rgba(0, 0, 0, 0.043),
+            0 72px 80px rgba(0, 0, 0, 0.06)
+;
 }
-.needinfo .preview{
+.preview{
+    background-color: white;
+    border-radius: 8px;
+    height: 460px;
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-right:30px ;
     float: left;
-    padding:0 50px;
+    padding:20px 30px;
+    display: flex;
+    align-items:center;
+    justify-content:center;
 }
-.needinfo .preview img{
+.preview img{
     width: 350px;
-    height: 350px;
 }
-.previewbottom p{
-    float: right;
-    width: 30px;
+.preview p{
+    text-align: right;
+    width: 350px;
     color: #919191;
     font-size: 13px;
 }
@@ -21,34 +39,40 @@
     color: red;
     cursor: pointer;
 }
-.iteminfo{
+.gooditeminfo{
+    position: relative;
+    background-color: white;
+    margin-top: 40px;
+    padding: 20px 60px;
     float: left;
-    width: 590px;
-    border-radius: 5px;
+    width: 640px;
+    height: 460px;
+    border-radius: 8px;
     text-align: left;
 }
-.iteminfo .needtitle{
+.gooditeminfo .goodtitle{
     font:700 18px Arial,"microsoft yahei";
     color: #666;
     text-align: left;
 }
-.iteminfo .senderinfo{
+.gooditeminfo .senderinfo{
     margin-top: 15px;
     height: 60px;
     border-radius: 5px;
     background-color: rgb(250, 250, 250);
 }
 
-.iteminfo .senderinfo .circleImg{
+.gooditeminfo .senderinfo .Show_circleImg{
     float: right;
     border-radius: 25px;
     width:50px;
     height:50px;
+    margin-top: 5px;
 }
-.iteminfo .senderinfo  .circleImg,.sendername:hover{
+.gooditeminfo .senderinfo  .circleImg,.sendername:hover{
     cursor: pointer;
 }
-.iteminfo .senderinfo .price{
+.gooditeminfo .senderinfo .price{
     float: left;
     line-height: 60px;
     margin-left: 16px;
@@ -56,7 +80,7 @@
     font-weight: 700;
     color: red;
 }
-.iteminfo .senderinfo .sendername{
+.gooditeminfo .senderinfo .sendername{
     float: right;
     line-height: 60px;
     font-size: 16px;
@@ -65,11 +89,11 @@
     margin-right: 16px;
     color: #ffd647;
 }
-.iteminfo .el-divider{
+.gooditeminfo .el-divider{
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.iteminfo .description{
+.gooditeminfo .description{
     height: 165px;
     padding: 14px;
     border-radius: 5px;
@@ -91,8 +115,8 @@
 .horizontalOverlay :hover{
     cursor: pointer;
 }
-.horizontalOverlay::before {
-    content: '创建订单';
+.goodinfo .horizontalOverlay::before {
+    content: '发出意向';
     padding: 12px 30px;
     display: block;
     position: absolute;
@@ -112,6 +136,41 @@
     transform: scaleX(1);
     cursor: pointer;
 }
+/*这里暂时有个bug*/
+.createIntentionInput{
+	position: absolute;
+	top:150px;
+	left:80px;
+	width: 592px;
+	height: 305px;
+    z-index: 1;
+    border-radius: 8px;
+    background-color:#e3f1f3;
+    box-shadow:
+            0 7.6px 4.6px rgba(0, 0, 0, 0.04),
+            0 15.8px 11.7px rgba(0, 0, 0, 0.058),
+            0 26.4px 23.9px rgba(0, 0, 0, 0.072),
+            0 44.6px 49.3px rgba(0, 0, 0, 0.09),
+            0 100px 135px rgba(0, 0, 0, 0.13)
+;
+
+}
+.createIntentionInput h1{
+    font-family: "微软雅黑 Light";
+    margin-top: 20px;
+    margin-left: 250px;
+}
+.createIntentionInput p{
+    margin-left: 2em;
+}
+.createIntentionInput .input{
+    color: coral;
+    font-weight: bold;
+    margin: 30px 150px 0px;
+}
+.createIntentionInput>button{
+
+}
 
 .horizontalOverlay2 {
     margin-left: 20px;
@@ -129,7 +188,7 @@
     cursor: pointer;
 }
 .horizontalOverlay2::before {
-    content: '发送消息';
+    content: '联系卖家';
     padding: 12px 30px;
     display: block;
     position: absolute;
@@ -158,16 +217,11 @@
 .comment .el-tabs__item{
     font-size: 16px;
 }
-.comment .el-tabs--border-card{
-    background-color: rgba(255,255,255,0.7);
-    border-radius: 10px;
-}
-
 .infinite-list::-webkit-scrollbar {
     /*隐藏滚轮*/
     display: none;
 }
-.comment .pressDownButton {
+.ShowPage .pressDownButton {
     margin-top:10px;
     float: right;
     width: 80px;
@@ -180,7 +234,30 @@
     transition: all 0.1s ease-in-out;
 }
 
-.comment .pressDownButton:hover {
+.ShowPage .pressDownButton:hover {
+    border-bottom-width: 0;
+    border-top-width: 4px;
+    cursor: pointer;
+}
+
+.ShowPage .goodinfo .pressDownButton{
+    border-top: 0px solid #e2f3f5;
+    margin-top: 30px;
+    margin-left: 24px;
+    margin-right: 100px;
+}
+.ShowPage .goodinfo .pressDownButton:hover {
+    border-bottom-width: 0;
+    border-top-width: 4px;
+    cursor: pointer;
+}
+.ShowPage .goodinfo .greybutton{
+    background-color: #e1e1e1;
+    color: #4c4c4c;
+    border-bottom: 4px solid #a4a4a4;
+    border-top: 0px solid #e2f3f5;
+}
+.ShowPage .greybutton:hover {
     border-bottom-width: 0;
     border-top-width: 4px;
     cursor: pointer;
