--- a/src/assets/NeedShowPage/NeedShowPage.css
+++ b/src/assets/NeedShowPage/NeedShowPage.css
@@ -1,14 +1,31 @@
-.goodinfo{
-    margin: 50px auto 0;
+.needinfo{
+    margin: 20px auto 40px;
     width: 1280px;
-    height: 480px;
+    height: 580px;
+    border-radius: 8px;
+    background-color: rgba(226,243,245,0.6);
+    box-shadow:
+            0 2px 2.2px rgba(0, 0, 0, 0.017),
+            0 4.8px 5.3px rgba(0, 0, 0, 0.024),
+            0 9px 10px rgba(0, 0, 0, 0.03),
+            0 16.1px 17.9px rgba(0, 0, 0, 0.036),
+            0 30.1px 33.4px rgba(0, 0, 0, 0.043),
+            0 72px 80px rgba(0, 0, 0, 0.06)
+;
 }
-.preview{
+.needinfo .preview{
+    background-color: white;
+    border-radius: 8px;
+    height: 460px;
+    margin-left: 40px;
+    margin-top: 40px;
+    margin-right:30px ;
     float: left;
-    padding:0 50px;
+    padding:20px 30px;
 }
-.preview img{
+.needinfo .preview img{
     width: 350px;
+    height: 350px;
 }
 .previewbottom p{
     float: right;
@@ -21,12 +38,17 @@
     cursor: pointer;
 }
 .iteminfo{
+    position: relative;
+    background-color: white;
+    margin-top: 40px;
+    padding: 20px 60px;
     float: left;
-    width: 590px;
-    border-radius: 5px;
+    width: 640px;
+    height: 460px;
+    border-radius: 8px;
     text-align: left;
 }
-.iteminfo .goodtitle{
+.iteminfo .needtitle{
     font:700 18px Arial,"microsoft yahei";
     color: #666;
     text-align: left;
@@ -38,12 +60,12 @@
     background-color: rgb(250, 250, 250);
 }
 
-.iteminfo .senderinfo .Show_circleImg{
+.iteminfo .senderinfo .circleImg{
     float: right;
+    margin-top: 5px;
     border-radius: 25px;
     width:50px;
     height:50px;
-    margin-top: 5px;
 }
 .iteminfo .senderinfo  .circleImg,.sendername:hover{
     cursor: pointer;
@@ -77,63 +99,6 @@
     border: 2px dashed #cdcdcd;
 
 }
-.horizontalOverlay {
-    overflow: hidden;
-    padding: 12px 30px;
-    border-radius: 5px;
-    background-color: rgba(255,0,0,0.7);
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    position: relative;
-    display: inline-block;
-}
-.horizontalOverlay :hover{
-    cursor: pointer;
-}
-.horizontalOverlay::before {
-    content: '创建订单';
-    padding: 12px 30px;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: red;
-    transform: scaleX(0);
-    transform-origin: 100% 100%;
-    transition: transform 0.3s cubic-bezier(0.53, 0.21, 0, 1);
-    will-change: transform;
-}
-
-.horizontalOverlay:hover::before  {
-    transform-origin: 0 0;
-    transform: scaleX(1);
-    cursor: pointer;
-}
-/*这里暂时有个bug*/
-.createIntentionInput{
-	position: absolute;
-	top: 67%;
-	left: 32.9%;
-	width: 15%;
-	height: 4%;
-}
-.createIntentionInput>input{
-	width: 60%;
-	border: 1px solid cadetblue;
-	outline: none;
-}
-.createIntentionInput>button{
-	position: relative;
-	top: 1px;
-	left: 1px;
-	width: calc(40% - 2px);
-	font-size: 15px;
-	background-color: #5F9EA0;
-}
-
 .horizontalOverlay2 {
     margin-left: 20px;
     overflow: hidden;
@@ -150,7 +115,7 @@
     cursor: pointer;
 }
 .horizontalOverlay2::before {
-    content: '联系卖家';
+    content: '发送消息';
     padding: 12px 30px;
     display: block;
     position: absolute;
@@ -179,6 +144,11 @@
 .comment .el-tabs__item{
     font-size: 16px;
 }
+.comment .el-tabs--border-card{
+    background-color: rgba(226,243,245,0.7);
+    border-radius: 10px;
+}
+
 .infinite-list::-webkit-scrollbar {
     /*隐藏滚轮*/
     display: none;
@@ -201,7 +171,6 @@
     border-top-width: 4px;
     cursor: pointer;
 }
-
 
 .bouncingLoader > div, .bouncingLoader:before, .bouncingLoader:after {
     display: inline-block;
