对个人页面进行了一定的美化，但是还没有最终完成

--- a/src/assets/Carousel/BlockRevealers/demo.css
+++ b/src/assets/Carousel/BlockRevealers/demo.css
@@ -3,7 +3,7 @@
 	width: 1150px;
 	height: 680px;
 	position: relative;
-	background-color: #e2f3f5;
+	background-color: #f2f7ff;
 	margin:0 auto;
 	z-index: 1;
 }
