--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -1,172 +1,252 @@
-h1{
-  margin-bottom: 30px;
-}
-.cursor-pointer{
-  height: 48px;
-  width: 130px;
-  margin: 0 auto;
-  cursor: pointer;
-}
-
-.slideUpBtn {
-  padding: 12px 24px;
-  background-color: transparent;
-  border: 2px solid hsl(243, 80%, 62%);
-  border-radius: 6px;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.25s cubic-bezier(1,.15,.34,.92)
-}
-
-.slideUpBtn span {
-  display: inline-block;
-  transition: inherit;
-  color: hsl(243, 80%, 62%);
-}
-
-.slideUpBtn:hover span {
-  opacity: 0;
-  transform: translateY(-100%)
-}
-
-.slideUpBtn::before {
-  content: "";
-  background-color: hsl(243, 80%, 62%);;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  transform: translateY(100%);
-  transition: inherit;
-  width: 100%;
-  transition: transform 0.25s cubic-bezier(1,.15,.34,.92)
-}
-
-.slideUpBtn::after {
-  content: '更换头像';
-  align-items: center;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  left: 0;
-  position: absolute;
-  top: 0;
-  transition: inherit;
-  transform: translateY(100%);
-  width: 100%;
-
-}
-
-.slideUpBtn:hover::before {
-  transform: translateY(0) scale(3);
-  transition-delay: .025s;
-}
-
-.slideUpBtn:hover::after {
-  opacity: 1;
-  color: hsl(222, 100%, 95%);
-  transform: translateY(0);
-}
-*{
-	margin: 0;
-	border: 0;
-}
-.background_userinfo{
-	background-image: url("../assets/city.jpg");
-	background-repeat: round;
-	background-size: 100%;
-  width: 100%;
-  height: 100%;
+.background_img{
 	position: fixed;
-}
-.head{
-	position: relative;
-	left: -320px;
-	bottom: -50px;
-	cursor: pointer;
+	width: 100%;
+	height: 867px;
+	top: 70px;
+	z-index: -1;
+	background-color: rgba(242,247,255,0.5);
 }
 .userinfo-main{
-	position: absolute;
-	/*bottom: -70px;*/
-	left: 500px;
-	top: 25px;
-	width: 600px;
-	height: 650px;
-	background-color: #f6ffff;
-	opacity: 0.9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 867px;
+	--width:100px;
+	--height: 600px;
+	--leftmar:200px;
 }
-.menu1{
-	background-color: #e0f5f5;
-	width: 60px;
-	height: 240px;
+.container{
 	position: relative;
-	left: -150px;
-	top: 20px;
+	left: 0px;
 }
-.menu1>li{
-	width: 50px;
-	height: 20px;
-	padding: 10px 5px;
-	text-align: center;
-	font-family: "microsoft yahei light";
-	display: block;
+.container .navigation{
+	position: relative;
+	width: 80px;
+	height: 420px;
+	background: #fff;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	overflow: hidden;
+	box-shadow: 10px 2px 15px 0px rgba(0,0,0,0.1);
+	transition: 0.5s;
+
+}
+.container .navigation.active{
+	width: 200px;
+}
+.container .navigation ul{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding-top: 30px;
+}
+.container .navigation ul li{
+	position: relative;
+	list-style: none;
+	width: 100%;
+	transition: 0.5s all;
 	cursor: pointer;
-	/*border-right-style: solid;
-	border-right-width: 5px;
-	border-right-color: #f5f5f5;*/
 }
-.menu1>li:first-child{
-	border-right-style: none;
+.container .navigation ul li:hover{
+	background: #efefef;
 }
-.menu1>li:hover{
-	background-color: #d4e7e7;
-	/*color: white;*/
+.container .navigation ul .Lichoosen{
+	background-color: #6843d1;
+}
+.container .navigation ul .Lichoosen a{
+	color: #FFFFFF;
+}
+.container .navigation ul li a{
+	position: relative;
+	display: block;
+	width: 100%;
+	display: flex;
+	text-decoration: none;
+	color: #6843d1;
+	font-weight: 700;
+}
+.container .navigation ul li a i{
+	position: relative;
+	display: block;
+	min-width: 80px;
+	height: 60px;
+	font-size: 25px;
+	line-height: 60px;
+	text-align: center;
+}
+.container .navigation ul li a .title{
+	position: relative;
+	display: block;
+	height: 60px;
+	line-height: 60px;
+	white-space: nowrap;
+}
+.toggle{
+	position: absolute;
+	top: calc(50% - 20px);
+	right: -20px;
+	width: 40px;
+	height: 40px;
+	background: white;
+	cursor: pointer;
+	border: 5px solid #f2f7ff;
+	border-radius: 50%;
+}
+.toggle i{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 5px;
+	line-height: 40px;
+	text-align: left;
+	font-size: 30px;
+	color: #6843d1;
+}
+
+/*h1{*/
+/*  margin-bottom: 30px;*/
+/*}*/
+/*.cursor-pointer{*/
+/*  height: 48px;*/
+/*  width: 130px;*/
+/*  margin: 0 auto;*/
+/*  cursor: pointer;*/
+/*}*/
+
+/*.slideUpBtn {*/
+/*  padding: 12px 24px;*/
+/*  background-color: transparent;*/
+/*  border: 2px solid hsl(243, 80%, 62%);*/
+/*  border-radius: 6px;*/
+/*  position: relative;*/
+/*  overflow: hidden;*/
+/*  transition: all 0.25s cubic-bezier(1,.15,.34,.92)*/
+/*}*/
+
+/*.slideUpBtn span {*/
+/*  display: inline-block;*/
+/*  transition: inherit;*/
+/*  color: hsl(243, 80%, 62%);*/
+/*}*/
+
+/*.slideUpBtn:hover span {*/
+/*  opacity: 0;*/
+/*  transform: translateY(-100%)*/
+/*}*/
+
+/*.slideUpBtn::before {*/
+/*  content: "";*/
+/*  background-color: hsl(243, 80%, 62%);;*/
+/*  height: 100%;*/
+/*  left: 0;*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  transform: translateY(100%);*/
+/*  transition: inherit;*/
+/*  width: 100%;*/
+/*  transition: transform 0.25s cubic-bezier(1,.15,.34,.92)*/
+/*}*/
+
+/*.slideUpBtn::after {*/
+/*  content: '更换头像';*/
+/*  align-items: center;*/
+/*  display: flex;*/
+/*  height: 100%;*/
+/*  justify-content: center;*/
+/*  left: 0;*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  transition: inherit;*/
+/*  transform: translateY(100%);*/
+/*  width: 100%;*/
+
+/*}*/
+
+/*.slideUpBtn:hover::before {*/
+/*  transform: translateY(0) scale(3);*/
+/*  transition-delay: .025s;*/
+/*}*/
+
+/*.slideUpBtn:hover::after {*/
+/*  opacity: 1;*/
+/*  color: hsl(222, 100%, 95%);*/
+/*  transform: translateY(0);*/
+/*}*/
+.maincardwidth{
+	margin-left: var(--leftmar);
+	width:var(--width);
+	background-color: #FFFFFF;
+	height: var(--height);
+	padding: 15px 30px;
+	border-radius: 8px;
+	box-shadow:
+			0 2.2px 3.7px rgba(0, 0, 0, 0.051),
+			0 5.2px 8.9px rgba(0, 0, 0, 0.071),
+			0 9.8px 16.8px rgba(0, 0, 0, 0.086),
+			0 17.4px 29.9px rgba(0, 0, 0, 0.1),
+			0 32.6px 56px rgba(0, 0, 0, 0.114),
+			0 78px 134px rgba(0, 0, 0, 0.14)
+;
+	transition: 0.5s;
 }
 .userinfo-maincard{
 	position: relative;
-	top: -230px;
-	/*border: 2px black solid;*/
-	height: 100%;
-	width: 100%;
+	height: 600px;
+	background-color: #FFFFFF;
 }
-.info-head{
+.userinfo-maincard .el-dialog{
+	border-radius: 8px;
+	box-shadow:
+			0 2.8px 35.4px -14px rgba(0, 0, 0, 0.039),
+			0 7.8px 54.5px -14px rgba(0, 0, 0, 0.049),
+			0 18.7px 71.6px -14px rgba(0, 0, 0, 0.061),
+			0 62px 134px -14px rgba(0, 0, 0, 0.11)
+;
+
+}
+.info{
+	margin-top: 100px;
+	height: 400px;
+}
+	.info-head{
 	position: relative;
 	width: 154px;
 	height: 154px;
-	left: 10px;
+	left:80px;
 	top: 62px;
 }
 .info-head>img{
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
 	position: absolute;
 	right: 0;
-	border-style: solid;
-	border-width: 2px;
-	border-color: #b3e2ea;
 }
 .info-head>p{
 	position: relative;
-	top: 160px;
+	top: 200px;
 }
 .imgCover{
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
 	position: absolute;
-	border-width: 2px;
-	border-style: solid;
-	border-color: white;
 	cursor: pointer;
+	right: 0;
 	background-color: dimgray;
-	opacity:0.8;
-	display: none;
+	opacity:0;
+	transition: 0.35s;
 }
 .imgCover>p{
 	color: white;
-	line-height: 150px;
+	font-size: 50px;
+	line-height: 200px;
 }
 .info-head>img:hover+.imgCover{
-	display: block;
+	opacity: 0.8;
+}
+.imgCover:hover{
+	opacity: 0.8;
+
 }
 .info-head>img,.info-head>div{
 	cursor: pointer;
@@ -177,17 +257,51 @@ h1{
 	position: relative;
 	width: 400px;
 	height: 500px;
-	left: -20px;
+	left: -10px;
 	top: -100px;
-	/*border-style: solid;
-	border-width: 2px;
-	border-color: yellowgreen;*/
+
 }
-.info-body .e1-input{
-	width: 200px;
+.info-edit{
+	position: absolute;
+	bottom: 75px;
+	right: 50px;
+}
+.info-save{
+	position: absolute;
+	bottom: 75px;
+	right: 50px;
+}
+.info-cancel{
+	position: absolute;
+	bottom: 75px;
+	left: 350px;
+}
+.pwd-change{
+	position: absolute;
+	bottom: 75px;
+	left: 350px;
+}
+.pwd-save{
+	position: absolute;
+	bottom: 75px;
+	left: 350px;
+}
+.pwd-cancel{
+	position:absolute;
+	bottom: 75px;
+	right: 50px;
+}
+.info-body2{
+	float: right;
+	position: relative;
+	width: 410px;
+	height: 500px;
+	left: -20px;
+	top: -320px;
 }
 .goods{
 	float:left;
+	margin-left: 40px;
 }
 .nextPageButton{
 	position: absolute;
@@ -199,17 +313,12 @@ h1{
 	top: 590px;
 	left: 100px;
 }
-.favorite{
-	height: 680px;
-	width: 615px;
-	/*border-style: solid;
-	border-width:2px;*/
-}
+
 .favorite-goodContainer{
 	position: relative;
-	top: 50px;
+	top: 25px;
 	left: 5px;
-	height: 570px;
+	height: 750px;
 	overflow: scroll;
 }
 .favorite-goodContainer::-webkit-scrollbar {
@@ -227,57 +336,20 @@ h1{
 	position: relative;
 	top: 620px;
 }
-.info-edit{
-	position: relative;
-	top: 250px;
-	left: 450px;
-}
-.info-save{
-	position: relative;
-	top: 250px;
-	left: 395px;
-}
-.info-cancel{
-	position: relative;
-	top: 210px;
-	left: 250px;
-}
-.pwd-change{
-	position: relative;
-	top: 350px;
-	left: 352px;
-}
-.pwd-save{
-	position: relative;
-	top: 350px;
-	left: 396px;
-}
-.pwd-cancel{
-	position: relative;
-	top: 310px;
-	left: 251px;
-}
-.info-body2{
-	float: right;
-	position: relative;
-	width: 410px;
-	height: 500px;
-	left: -20px;
-	top: -290px;
-}
-.demand{
-	height: 680px;
-	width: 615px;
-}
+
+
+
 .demand-needContainer{
 	position: relative;
-	top: 50px;
+	top: 25px;
 	left: 5px;
-	height: 570px;
+	height: 750px;
 	overflow: scroll;
 }
 .needs{
 	float: left;
+	margin-left: 40px;
+
 }
 .demand-needContainer::-webkit-scrollbar {
 /*隐藏滚轮*/
@@ -291,12 +363,7 @@ h1{
 	position: relative;
 	top: 620px;
 }
-.good___{
-	height: 680px;
-	width: 615px;
-	/*border-style: solid;
-	border-width:2px;*/
-}
+
 .submenu_fold>li{
 	width: 50px;
 	height: 20px;
@@ -321,7 +388,8 @@ h1{
 	/*top: -66.66666;*/
 }
 .rectangleContainer{
-	width: 100%;
+	margin: 0 auto;
+	width: 90%;
 	height: 95%;
 	overflow-y: scroll;
 	/*border: 2px black solid;*/
@@ -329,6 +397,67 @@ h1{
 .rectangleContainer::-webkit-scrollbar{
 	display: none;
 }
+.radiusPulse {
+	width: 20px;
+	height: 20px;
+	padding: 15px;
+	position: relative;
+	right: 0;
+	margin-bottom: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
+	cursor: pointer;
+}
+.radiusPulse span{
+	color: hsl(243, 80%, 62%);
+	font-weight: bold;
+	font-size: 20px;
+}
+.radiusPulse::before {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	content: "买";
+	font-weight: 700;
+	color: #FFFFFF;
+	position: absolute;
+	top: -1px;
+	bottom: -1px;
+	right: -1px;
+	left: -1px;
+	background-color: hsl(243, 80%, 62%);
+	border-radius: 50%;
+	transform: scale(0);
+	transition: transform .3s cubic-bezier(.215,.61,.355,1);
+}
+.radiusPulse2::before{
+	content: "卖";
+}
+.radiusPulse::after {
+	content: "";
+	position: absolute;
+	top: -1px;
+	bottom: -1px;
+	right: -1px;
+	left: -1px;
+	border: 3px solid hsl(243, 80%, 62%);
+	border-radius: 50%;
+	transform: scale(1);
+	opacity: 1;
+	transition: opacity .3s cubic-bezier(.215,.61,.355,1),transform .3s cubic-bezier(.215,.61,.355,1);
+}
+
+.radiusPulse:hover::before {
+	transform: scale(1);
+}
+
+.radiusPulse:hover::after {
+	transform: scale(1.2);
+	opacity: 0;
+}
+
 /*以下是关于标签的，从element ui抄的,对button有改动*/
 .el-tag + .el-tag {
 	margin-left: 10px;
