--- a/src/assets/userInformation.css
+++ b/src/assets/userInformation.css
@@ -192,7 +192,7 @@
 }
 .userinfo-maincard{
 	position: relative;
-	height: 600px;
+	height: var(--height);
 	background-color: #FFFFFF;
 }
 .userinfo-maincard .el-dialog{
@@ -388,9 +388,14 @@
 	/*top: -66.66666;*/
 }
 .rectangleContainer{
-	margin: 0 auto;
-	width: 90%;
-	height: 95%;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+	padding-top: 25px;
+	margin: 0px auto ;
+	width: 900px;
+	height: 750px;
 	overflow-y: scroll;
 	/*border: 2px black solid;*/
 }
@@ -403,6 +408,7 @@
 	padding: 15px;
 	position: relative;
 	right: 0;
+	bottom: 100px;
 	margin-bottom: 10px;
 	display: flex;
 	justify-content: center;
