--- a/src/assets/UserInfo/userInformation.css
+++ b/src/assets/UserInfo/userInformation.css
@@ -1,7 +1,7 @@
 .background_img{
 	position: fixed;
 	width: 100%;
-	height: 867px;
+	height: 1080px;
 	top: 70px;
 	z-index: -1;
 	background-color: rgba(242,247,255,0.5);
@@ -195,6 +195,7 @@
 	height: var(--height);
 	background-color: #FFFFFF;
 }
+
 .userinfo-maincard .el-dialog{
 	border-radius: 8px;
 	box-shadow:
@@ -319,11 +320,10 @@
 	top: 25px;
 	left: 5px;
 	height: 750px;
-	overflow: scroll;
 }
 .favorite-goodContainer::-webkit-scrollbar {
 /*隐藏滚轮*/
-	display: none;
+
 }
 .el-divider{
 	margin: 0;
@@ -344,7 +344,7 @@
 	top: 25px;
 	left: 5px;
 	height: 750px;
-	overflow: scroll;
+	overflow: auto;
 }
 .needs{
 	float: left;
@@ -353,7 +353,6 @@
 }
 .demand-needContainer::-webkit-scrollbar {
 /*隐藏滚轮*/
-	display: none;
 }
 .demand-divider1{
 	position: relative;
@@ -387,20 +386,23 @@
 	left: 100%;
 	/*top: -66.66666;*/
 }
+
 .rectangleContainer{
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
-	padding-top: 25px;
-	margin: 0px auto ;
+	margin: 0px auto;
 	width: 900px;
-	height: 750px;
+	height: 780px;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	/*border: 2px black solid;*/
 }
-.rectangleContainer::-webkit-scrollbar{
-	display: none;
+.rectangleContainer::-webkit-scrollbar-thumb{
+	background-color: #6843d1;
+	width: 9px;
+	border-radius: 6px;
 }
 .radiusPulse {
 	width: 20px;
