--- a/src/assets/GoodShowPage/GoodShowPage.css
+++ b/src/assets/GoodShowPage/GoodShowPage.css
@@ -61,7 +61,15 @@
     border-radius: 5px;
     background-color: rgb(250, 250, 250);
 }
-
+.gooditeminfo .senderinfo .rate{
+    width: 240px;
+    height: 24px;
+    float: right;
+    margin-top: 18px;
+}
+.gooditeminfo .senderinfo .rate i{
+    font-size: 24px;
+}
 .gooditeminfo .senderinfo .Show_circleImg{
     float: right;
     border-radius: 25px;
